@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection

'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

'class ArrayList {
'Object[] elementData
'size()
'}

'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

class Wallet{
+runningOrders: Array[Order]
+completedOrders: Array[Order]
+stocks: Set[Stocks]
+owner: String

+checkIfAtLeastOneStockBought(String company): boolean
+areBeingBought(List<Order> orders): boolean
}

class Stocks{
+orders: Array[Order]
+currentPrice: int
+company: String

+getCurrentPrice(): int
}

class Order{
+totalAmount: int
+remainingAmount: int
+maximumPrice: int
+isBought: boolean
+isResigned: boolean
+productName: String

+Order(int amount, int maximumPrice, Stock givenStock): void
+isBought(): boolean
+setMaximumPrice(): void
+buy(int amount): void
+resign(): void
+isRunningOrder() : boolean
}

Wallet <-- Stocks
Stocks <-- Order

@enduml